upd data process

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,27 +1,49 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import urllib\n",
-    "proxies = {'https': 'http://172.17.128.1:7890', 'http': 'http://172.17.128.1:7890', 'all': 'sock5://172.17.128.1:7891'}"
+    "# Data process\n",
+    "\n",
+    "Suppose submodule is pulled, we now\n",
+    "\n",
+    "1. Download label data from the website.\n",
+    "2. Parse those data, filter out useless properties, and save them as a csv file.\n",
+    "   - each data item contains \n",
+    "     1. the btor2 file name\n",
+    "     2. the validator\n",
+    "     3. the result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib\n",
+    "# user should set their own proxy...\n",
+    "proxies = {'https': 'http://172.31.80.1:7890', 'http': 'http://172.31.80.1:7890', 'all': 'sock5://172.31.80.1:7891'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Download and decompress the labels.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Response [200]>\n",
-      "['?C=N;O=D', '?C=M;O=A', '?C=S;O=A', '?C=D;O=A', '/~chien/benchexec-results/btor2c-eval/', 'abc.2023-01-17_14-53-12.logfiles.zip', 'abc.2023-01-17_14-53-12.results.pdr.bv-64.txt', 'abc.2023-01-17_14-53-12.results.pdr.bv-64.xml.bz2', 'abc.2023-01-17_14-53-12.results.pdr.bv-64.xml.bz2.bak', 'abc.2023-01-18_00-15-18.logfiles.zip', 'abc.2023-01-18_00-15-18.results.bmc.bv-64.txt', 'abc.2023-01-18_00-15-18.results.bmc.bv-64.xml.bz2', 'abc.2023-01-18_00-15-18.results.bmc.bv-64.xml.bz2.bak', 'avr.2023-01-17_15-17-26.logfiles.zip', 'avr.2023-01-17_15-17-26.results.kind.arr-64.xml.bz2', 'avr.2023-01-17_15-17-26.results.kind.arr-64.xml.bz2.bak', 'avr.2023-01-17_15-17-26.results.kind.bv-64.xml.bz2', 'avr.2023-01-17_15-17-26.results.kind.bv-64.xml.bz2.bak', 'avr.2023-01-17_15-17-26.results.kind.xml.bz2', 'avr.2023-01-17_15-17-26.results.kind.xml.bz2.bak', 'avr.2023-01-17_15-17-26.results.pdr.arr-64.xml.bz2', 'avr.2023-01-17_15-17-26.results.pdr.arr-64.xml.bz2.bak', 'avr.2023-01-17_15-17-26.results.pdr.bv-64.xml.bz2', 'avr.2023-01-17_15-17-26.results.pdr.bv-64.xml.bz2.bak', 'avr.2023-01-17_15-17-26.results.pdr.xml.bz2', 'avr.2023-01-17_15-17-26.results.pdr.xml.bz2.bak', 'avr.2023-01-17_15-17-26.results.txt', 'avr.2023-01-18_00-47-45.logfiles.zip', 'avr.2023-01-18_00-47-45.results.bmc.bv-64.txt', 'avr.2023-01-18_00-47-45.results.bmc.bv-64.xml.bz2', 'avr.2023-01-18_00-47-45.results.bmc.bv-64.xml.bz2.bak', 'cpachecker-eagerMod.2023-01-17_16-31-41.logfiles.zip', 'cpachecker-eagerMod.2023-01-17_16-31-41.results.predAbs.arr-64.xml.bz2', 'cpachecker-eagerMod.2023-01-17_16-31-41.results.predAbs.arr-64.xml.bz2.bak', 'cpachecker-eagerMod.2023-01-17_16-31-41.results.predAbs.bv-64.xml.bz2', 'cpachecker-eagerMod.2023-01-17_16-31-41.results.predAbs.bv-64.xml.bz2.bak', 'cpachecker-eagerMod.2023-01-17_16-31-41.results.predAbs.txt', 'cpachecker-eagerMod.2023-01-17_16-31-41.results.predAbs.xml.bz2', 'cpachecker-eagerMod.2023-01-17_16-31-41.results.predAbs.xml.bz2.bak', 'cpachecker-lazyMod.2023-01-17_17-25-41.logfiles.zip', 'cpachecker-lazyMod.2023-01-17_17-25-41.results.predAbs.arr-64.xml.bz2', 'cpachecker-lazyMod.2023-01-17_17-25-41.results.predAbs.arr-64.xml.bz2.bak', 'cpachecker-lazyMod.2023-01-17_17-25-41.results.predAbs.bv-64.xml.bz2', 'cpachecker-lazyMod.2023-01-17_17-25-41.results.predAbs.bv-64.xml.bz2.bak', 'cpachecker-lazyMod.2023-01-17_17-25-41.results.predAbs.txt', 'cpachecker-lazyMod.2023-01-17_17-25-41.results.predAbs.xml.bz2', 'cpachecker-lazyMod.2023-01-17_17-25-41.results.predAbs.xml.bz2.bak', 'cpachecker-lazyMod.2023-01-18_01-24-33.logfiles.zip', 'cpachecker-lazyMod.2023-01-18_01-24-33.results.bmc-boolector-noPtrAlias.bv-64.txt', 'cpachecker-lazyMod.2023-01-18_01-24-33.results.bmc-boolector-noPtrAlias.bv-64.xml.bz2', 'cpachecker-lazyMod.2023-01-18_01-24-33.results.bmc-boolector-noPtrAlias.bv-64.xml.bz2.bak', 'cpachecker-v2c.2023-01-18_03-01-26.logfiles.zip', 'cpachecker-v2c.2023-01-18_03-01-26.results.predAbs.bv-btor2c.txt', 'cpachecker-v2c.2023-01-18_03-01-26.results.predAbs.bv-btor2c.xml.bz2', 'cpachecker-v2c.2023-01-18_03-01-26.results.predAbs.bv-btor2c.xml.bz2.bak', 'cpachecker-v2c.2023-01-18_03-24-50.logfiles.zip', 'cpachecker-v2c.2023-01-18_03-24-50.results.predAbs.bv-v2c.txt', 'cpachecker-v2c.2023-01-18_03-24-50.results.predAbs.bv-v2c.xml.bz2', 'cpachecker-v2c.2023-01-18_03-24-50.results.predAbs.bv-v2c.xml.bz2.bak', 'esbmc-eagerMod.2023-01-17_18-38-57.logfiles.zip', 'esbmc-eagerMod.2023-01-17_18-38-57.logfiles/', 'esbmc-eagerMod.2023-01-17_18-38-57.results.kind.arr-64.xml.bz2', 'esbmc-eagerMod.2023-01-17_18-38-57.results.kind.arr-64.xml.bz2.bak', 'esbmc-eagerMod.2023-01-17_18-38-57.results.kind.bv-64.xml.bz2', 'esbmc-eagerMod.2023-01-17_18-38-57.results.kind.bv-64.xml.bz2.bak', 'esbmc-eagerMod.2023-01-17_18-38-57.results.kind.txt', 'esbmc-eagerMod.2023-01-17_18-38-57.results.kind.xml.bz2', 'esbmc-eagerMod.2023-01-17_18-38-57.results.kind.xml.bz2.bak', 'esbmc-lazyMod.2023-01-17_19-41-45.logfiles.zip', 'esbmc-lazyMod.2023-01-17_19-41-45.logfiles/', 'esbmc-lazyMod.2023-01-17_19-41-45.results.kind.arr-64.xml.bz2', 'esbmc-lazyMod.2023-01-17_19-41-45.results.kind.arr-64.xml.bz2.bak', 'esbmc-lazyMod.2023-01-17_19-41-45.results.kind.bv-64.xml.bz2', 'esbmc-lazyMod.2023-01-17_19-41-45.results.kind.bv-64.xml.bz2.bak', 'esbmc-lazyMod.2023-01-17_19-41-45.results.kind.txt', 'esbmc-lazyMod.2023-01-17_19-41-45.results.kind.xml.bz2', 'esbmc-lazyMod.2023-01-17_19-41-45.results.kind.xml.bz2.bak', 'esbmc-lazyMod.2023-01-18_02-08-43.logfiles.zip', 'esbmc-lazyMod.2023-01-18_02-08-43.logfiles/', 'esbmc-lazyMod.2023-01-18_02-08-43.results.bmc.bv-64.txt', 'esbmc-lazyMod.2023-01-18_02-08-43.results.bmc.bv-64.xml.bz2', 'esbmc-lazyMod.2023-01-18_02-08-43.results.bmc.bv-64.xml.bz2.bak', 'esbmc-v2c.2023-01-18_03-39-46.logfiles.zip', 'esbmc-v2c.2023-01-18_03-39-46.results.kind.bv-btor2c.txt', 'esbmc-v2c.2023-01-18_03-39-46.results.kind.bv-btor2c.xml.bz2', 'esbmc-v2c.2023-01-18_03-39-46.results.kind.bv-btor2c.xml.bz2.bak', 'esbmc-v2c.2023-01-18_03-55-57.logfiles.zip', 'esbmc-v2c.2023-01-18_03-55-57.results.kind.bv-v2c.txt', 'esbmc-v2c.2023-01-18_03-55-57.results.kind.bv-v2c.xml.bz2', 'esbmc-v2c.2023-01-18_03-55-57.results.kind.bv-v2c.xml.bz2.bak', 'fig5.bug-hunting.table.html', 'fusebmc-lazyMod.2023-01-18_02-43-45.files/', 'fusebmc-lazyMod.2023-01-18_02-43-45.logfiles.zip', 'fusebmc-lazyMod.2023-01-18_02-43-45.results.default.bv-false64.txt', 'fusebmc-lazyMod.2023-01-18_02-43-45.results.default.bv-false64.xml.bz2', 'fusebmc-lazyMod.2023-01-18_02-43-45.results.default.bv-false64.xml.bz2.bak', 'tab1.all-verifiers.table.html', 'tab2.v2c-comparison.table.html', 'veriabs-eagerMod.2023-01-17_21-07-15.logfiles.zip', 'veriabs-eagerMod.2023-01-17_21-07-15.logfiles/', 'veriabs-eagerMod.2023-01-17_21-07-15.results.default.arr-64.xml.bz2', 'veriabs-eagerMod.2023-01-17_21-07-15.results.default.arr-64.xml.bz2.bak', 'veriabs-eagerMod.2023-01-17_21-07-15.results.default.bv-64.xml.bz2', 'veriabs-eagerMod.2023-01-17_21-07-15.results.default.bv-64.xml.bz2.bak', 'veriabs-eagerMod.2023-01-17_21-07-15.results.default.txt', 'veriabs-eagerMod.2023-01-17_21-07-15.results.default.xml.bz2', 'veriabs-eagerMod.2023-01-17_21-07-15.results.default.xml.bz2.bak', 'veriabs-lazyMod.2023-01-17_22-40-24.logfiles.zip', 'veriabs-lazyMod.2023-01-17_22-40-24.logfiles/', 'veriabs-lazyMod.2023-01-17_22-40-24.results.default.arr-64.xml.bz2', 'veriabs-lazyMod.2023-01-17_22-40-24.results.default.arr-64.xml.bz2.bak', 'veriabs-lazyMod.2023-01-17_22-40-24.results.default.bv-64.xml.bz2', 'veriabs-lazyMod.2023-01-17_22-40-24.results.default.bv-64.xml.bz2.bak', 'veriabs-lazyMod.2023-01-17_22-40-24.results.default.txt', 'veriabs-lazyMod.2023-01-17_22-40-24.results.default.xml.bz2', 'veriabs-lazyMod.2023-01-17_22-40-24.results.default.xml.bz2.bak', 'veriabs-v2c.2023-01-18_04-12-06.logfiles.zip', 'veriabs-v2c.2023-01-18_04-12-06.logfiles/', 'veriabs-v2c.2023-01-18_04-12-06.results.default.bv-btor2c.txt', 'veriabs-v2c.2023-01-18_04-12-06.results.default.bv-btor2c.xml.bz2', 'veriabs-v2c.2023-01-18_04-12-06.results.default.bv-btor2c.xml.bz2.bak', 'veriabs-v2c.2023-01-18_04-40-53.logfiles.zip', 'veriabs-v2c.2023-01-18_04-40-53.logfiles/', 'veriabs-v2c.2023-01-18_04-40-53.results.default.bv-v2c.txt', 'veriabs-v2c.2023-01-18_04-40-53.results.default.bv-v2c.xml.bz2', 'veriabs-v2c.2023-01-18_04-40-53.results.default.bv-v2c.xml.bz2.bak'] \n",
-      "\n"
+      "<Response [200]>\n"
      ]
     }
    ],
@@ -49,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +88,6 @@
     }
    ],
    "source": [
-    "\n",
     "tools = [\"cpachecker\", \"esbmc\", \"veriabs\"]\n",
     "\n",
     "# Define the regular expression pattern\n",
@@ -83,10 +104,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import urllib.request\n",
+    "\n",
+    "base_url = \"https://www.cip.ifi.lmu.de/~chien/benchexec-results/btor2c-eval/final-full-results/\"\n",
+    "label_directory = \"labels/\"\n",
+    "\n",
+    "for file_name in filtered_file_names:\n",
+    "    url = base_url + file_name\n",
+    "    destination = label_directory + file_name\n",
+    "    \n",
+    "    if not os.path.exists(destination):\n",
+    "        urllib.request.urlretrieve(url, destination)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bz2\n",
+    "import os\n",
+    "\n",
+    "# Loop through each bz2 file in the directory\n",
+    "for file_name in filtered_file_names:\n",
+    "    bz2_file_path = label_directory + file_name\n",
+    "    extract_path = label_directory + file_name[:-4]  # Remove the .bz2 extension\n",
+    "    \n",
+    "    # Open the bz2 file\n",
+    "    with bz2.open(bz2_file_path, 'rb') as bz2_file:\n",
+    "        # Read the compressed data\n",
+    "        data = bz2_file.read()\n",
+    "        \n",
+    "        # Write the decompressed data to a new file\n",
+    "        with open(extract_path, 'wb') as extract_file:\n",
+    "            extract_file.write(data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**parse the xml label files to csv files.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word-level-hwmc-benchmarks/bv/btor2/\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yaml\n",
+    "\n",
+    "# Load the config.yaml file\n",
+    "with open('config.yaml', 'r') as file:\n",
+    "    config = yaml.safe_load(file)\n",
+    "\n",
+    "# Access the value of dataset.path\n",
+    "dataset_path = config['dataset']['directory']\n",
+    "\n",
+    "# Print the dataset path\n",
+    "print(dataset_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'yml': 'word-level-hwmc-benchmarks/bv/btor2/beem/adding.1.prop1-back-serstep.yml', 'btor2': 'word-level-hwmc-benchmarks/bv/btor2/beem/adding.1.prop1-back-serstep.btor2', 'c': 'word-level-hwmc-benchmarks/bv/btor2/beem/adding.1.prop1-back-serstep.c', 'property': 'unreach-call', 'propertyFile': 'word-level-hwmc-benchmarks/bv/btor2/../../properties/unreach-call.prp', 'expectedVerdict': 'false', 'cputime': 901.71803173, 'memory': 346869760, 'status': 'FAILED'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "xml_label_files = [label_directory + file_name[:-4] for file_name in filtered_file_names]\n",
+    "\n",
+    "import xml.etree.ElementTree as ET\n",
+    "\n",
+    "runs = []\n",
+    "\n",
+    "for xml_file in xml_label_files:\n",
+    "    run = []\n",
+    "    tree = ET.parse(xml_file)\n",
+    "    root = tree.getroot()\n",
+    "    run_children = root.findall('run')\n",
+    "    for run_node in run_children:\n",
+    "        parent_dir = os.path.basename(os.path.dirname(run_node.attrib['files'])) + \"/\"\n",
+    "        item = {\n",
+    "            'yml': dataset_path + parent_dir + os.path.basename(run_node.attrib['name']),\n",
+    "            'btor2': dataset_path + parent_dir + os.path.basename(run_node.attrib['files'][:-2]) + 'btor2',\n",
+    "            'c': dataset_path + parent_dir + os.path.basename(run_node.attrib['files'][:-1]),\n",
+    "            'property': run_node.attrib['properties'],\n",
+    "            'propertyFile': dataset_path + \"../../properties/\" + os.path.basename(run_node.attrib['propertyFile']),\n",
+    "            'expectedVerdict': run_node.attrib['expectedVerdict'],\n",
+    "        }\n",
+    "        # run_node.attrib\n",
+    "        properties = run_node.findall('column')\n",
+    "        for property_node in properties:\n",
+    "            if property_node.attrib['title'] == 'cputime':\n",
+    "                item['cputime'] = float(property_node.attrib['value'][:-1])\n",
+    "            elif property_node.attrib['title'] == 'memory':\n",
+    "                item['memory'] = int(property_node.attrib['value'][:-1])\n",
+    "            elif property_node.attrib['title'] == 'status':\n",
+    "                item['status'] = \\\n",
+    "                    'TRUE' if 'true' in property_node.attrib['value'] else \\\n",
+    "                    'FALSE' if 'false' in property_node.attrib['value'] else \\\n",
+    "                    'FAILED'\n",
+    "        run.append(item)\n",
+    "    runs.append(run)\n",
+    "# we have 5 files, each of them contains 1342 items\n",
+    "print(runs[0][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note that we need to invoke btor2c**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for run in runs:\n",
+    "    for test in run:\n",
+    "        if not os.path.exists(test['btor2']):\n",
+    "            print(test['btor2'])\n",
+    "        if not os.path.exists(test['yml']):\n",
+    "            print(test['yml'])\n",
+    "        # if not os.path.exists(test['c']):\n",
+    "        #     print(test['c'])\n",
+    "        if not os.path.exists(test['propertyFile']):\n",
+    "            print(test['propertyFile'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: cputime, status, memory need to be summarized into one property "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import pickle\n",
+    "\n",
+    "# Dump the runs dictionary into a pickle file\n",
+    "with open('runs.pickle', 'wb') as file:\n",
+    "    pickle.dump(runs, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'yml': 'word-level-hwmc-benchmarks/bv/btor2/beem/adding.1.prop1-back-serstep.yml', 'btor2': 'word-level-hwmc-benchmarks/bv/btor2/beem/adding.1.prop1-back-serstep.btor2', 'c': 'word-level-hwmc-benchmarks/bv/btor2/beem/adding.1.prop1-back-serstep.c', 'property': 'unreach-call', 'propertyFile': 'word-level-hwmc-benchmarks/bv/btor2/../../properties/unreach-call.prp', 'expectedVerdict': 'false', 'cputime': 901.71803173, 'memory': 346869760, 'status': 'FAILED'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
