--- a/main.ipynb
+++ b/main.ipynb
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**parse the xml label files to csv files.**"
+    "**parse the xml label files and filter out useless properties.**"
    ]
   },
   {
@@ -289,13 +289,6 @@
     "            print(test['c'])\n",
     "        if not os.path.exists(test['propertyFile']):\n",
     "            print(test['propertyFile'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO: cputime, status, memory need to be summarized into one property "
    ]
   },
   {
@@ -467,6 +460,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Investigate the dataset...**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 175,
    "metadata": {},
@@ -610,9 +610,10 @@
    "source": [
     "from sklearn.metrics import f1_score\n",
     "import numpy as np\n",
-    "from collections import Counter\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from collections import Counter\n",
+    "\n",
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y_correctness, test_size=0.2, random_state=47)\n",
     "\n",
@@ -715,6 +716,18 @@
     "    print(f\"{feature_names[i]}: {importance[i]}\")\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**We could similarly train regression model for cputime and memory. \n",
+    "**\n",
+    "Then the algorithm selection model could just: \n",
+    "1. run the three models and get the result for each `tool-config`\n",
+    "2. sort by the prediction (correctness, cputime, memory), lexicographically\n",
+    "3. choose the first one as the best `tool-config`"
    ]
   },
   {
